[BTWCT-2269] [BTWCT-2102] - merged radio/checkbox.js into one file to pass sonar, fixed 2102 UX alignment bug of text & checkbox/radio

--- a/waters-aem-frontend/src/styles/forms.scss
+++ b/waters-aem-frontend/src/styles/forms.scss
@@ -291,21 +291,33 @@
 
         &-checkbox,
         &-radio {
-            legend {
-                padding: 0 $space-xxs;
+
+            display: flex;
+            label {
+                display: inline;
+                font-weight: $font-weight-light;
             }
-            label .optional{
+
+            &--grouping-item {
+                display: flex;
+            }
+
+            &--wrapper {
+                &.disabled {
+                    label {
+                        color: $color-disabled !important;
+                    }
+                }
+
+            }
+
+            &.optional{
                 @include font-small;
             }
         }
 
         input[type="checkbox"] {
             display: none;
-
-            & ~ label {
-                display: inline;
-                font-weight: $font-weight-light;
-            }
 
             &:checked ~ .checkbox {
                 border: 1px solid $color-background-dark;
@@ -321,9 +333,10 @@
             border: 1px solid $color-gray-40;
             height: 1em;
             width: 1em;
-            vertical-align: -2px;
+            margin-top: 0.3em;
             margin-right: $space-xxs;
             transition: none;
+            flex-shrink: 0;
             svg {
                 display: none;
                 width: 0.8em;
@@ -348,10 +361,6 @@
                 border: 1px solid $color-disabled !important;
                 color: $color-disabled !important;
                 cursor: default;
-
-                & ~ label {
-                    color: $color-disabled !important;
-                }
             }
             &.error {
                 border: 1px solid $color-error;
@@ -360,11 +369,6 @@
 
         input[type="radio"] {
             display: none;
-
-            & ~ label {
-                display: inline-block;
-                font-weight: $font-weight-light;
-            }
 
             &:checked ~ .radio {
                 border: 1px solid $color-background-dark;
@@ -379,11 +383,12 @@
             border: 1px solid $color-gray-40;
             height: $icon-s;
             width: $icon-s;
-            vertical-align: -2px;
+            margin-top: 0.3em;
             margin-right: $space-xxs;
             transition: none;
             border-radius: 100%;
             position: relative;
+            flex-shrink: 0;
             div.selector {
                 display: none;
                 background-color: $color-gray-50;
@@ -403,10 +408,6 @@
                 border: 1px solid $color-disabled !important;
                 color: $color-disabled !important;
                 cursor: default;
-
-                & ~ label {
-                    color: $color-disabled !important;
-                }
             }
 
             &.error {
